# multiplayerGame

./: .gitignore  README.md  app.py  pyproject.toml  railway.json  requirements.txt  setup_uv.sh
static/css/: style.css
static/js/: game.js
templates/: game.html  index.html  login.html  register.html
